--- a/assets/css/noscript-nav.css
+++ b/assets/css/noscript-nav.css
@@ -1,10 +1,10 @@
 @media screen and (max-width: 768px) {
   nav {
-    position: static;
     padding-right: 0;
   }
 
-  nav img {
+  nav img,
+  .hamburger {
     display: none;
   }
 
@@ -27,6 +27,7 @@
     z-index: 2;
     opacity: 1;
   }
+
   nav .links .link a {
     font-size: 1rem;
   }
